# reader

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.nas.yml  docker-compose.yml  index.html  metadata.json  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
apps/server/: Cargo.toml
apps/server/src/: main.rs  reader_api.rs  tests.rs
apps/server/tests/: reader_api.rs
crates/reader-application/: Cargo.toml
crates/reader-contracts/: Cargo.toml
crates/reader-core/: Cargo.toml
crates/reader-core/examples/: scan.rs
crates/reader-core/src/: atomic.rs  fingerprint.rs  lib.rs  model.rs  registry.rs
crates/reader-core/src/reader/: cache.rs  epub.rs  lifecycle.rs  mod.rs  model.rs  tests.rs  txt.rs
crates/reader-core/src/reader/epub/: archive.rs  metadata.rs  package.rs  path.rs  persistence.rs  resources.rs
crates/reader-core/src/reader/tests/: cache.rs  epub.rs  probes.rs  txt.rs
crates/reader-core/src/reader/txt/: support.rs
crates/reader-core/src/registry/: support.rs  tests.rs
crates/reader-state/: Cargo.toml
docs/: architecture-1.1.md  long-file-refactor-plan.md  reader-performance-plan.md
public/fonts/: OFL-LXGW-975-Yuan.txt
scripts/: fast-tauri-dev.mjs  metadata-series.test.mjs  reader-epub-scroll-frontmatter.mjs  reader-real-scenario.mjs  reader-resize-scenario.mjs  reader-txt-boundary-scenario.mjs
server/: Cargo.toml
server/src/: error.rs  lib.rs  library_api.rs  main.rs  reader_api.rs  state.rs  tests.rs
server/tests/: reader_api.rs
src/: App.tsx  LibraryShell.tsx  ReaderLayoutNext.tsx  ReadiumEpubViewerNext.tsx  ReadiumReaderViewer.tsx  SeriesViewNext.tsx  TxtViewerNext.tsx  dev-entry.ts  index.css  lucide-direct-imports.d.ts  main.tsx  reader-overrides.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/reader/: app.rs  book_metadata.rs  cache_files.rs  epub_archive.rs  epub_commands.rs  epub_metadata.rs  epub_publication.rs  epub_resources.rs  file_associations.rs  library.rs  lifecycle.rs  model.rs  startup_splash.rs  tests.rs  txt_cache.rs  txt_commands.rs  txt_index.rs  webdav.rs  webdav_commands.rs  windows_dialog.rs
src/adapters/: httpReaderGateway.ts  shared.ts  tauriReaderGateway.ts
src/components/: BookCover.tsx  Library.tsx  LibraryTiles.tsx  SettingsView.tsx  Sidebar.tsx  WebDavLibrary.tsx
src/contracts/: readerGateway.ts
src/lib/: backend.ts  continuousResourceDom.ts  continuousResourceGeometry.ts  continuousResourceLocator.ts  continuousResourceRecords.ts  continuousResourceStrip.ts  continuousResourceStripTypes.ts  epubResourceManager.ts  fontPacks.ts  metadataSeries.ts  native.ts  nativeImage.ts  nativeWebDav.ts  publicationPageMap.ts  publicationPositionCache.ts  readerAnimations.ts  readerCacheCoordinator.ts  readerDocumentStyles.ts  readerLayoutCache.ts  readerLayoutTransactions.ts  readerPerformance.ts  readerPublication.ts  readerRuntimePolicy.ts  readerScheduler.ts  readerWarmup.ts  readingSettings.ts  readiumFrameLayout.ts  readiumFrameNavigation.ts  readiumNavigatorAdapter.ts  readiumPublication.ts  readiumPublicationModel.ts  readiumPublicationSupport.ts  readiumReaderCleanup.ts  readiumReaderDeferred.ts  readiumReaderNavigatorCallbacks.ts  readiumReaderRelativeNavigation.ts  readiumReaderRuntime.ts  readiumReaderTransition.ts  readiumReaderWheel.ts  readiumViewerAnchors.ts  (+11 more)
src/reader/: continuousResourceRecords.ts  continuousResourceStrip.ts  continuousResourceStripTypes.ts  epubPosition.worker.ts  epubResourceManager.ts  readerDocumentStyles.ts  readerRuntimePolicy.ts  readerWarmup.ts  readiumFrameLayout.ts  readiumFrameNavigation.ts  readiumNavigatorAdapter.ts  readiumPublication.ts  (+16 more)
(+35 files in other folders)
