[package]
name = "zenith-reader"
version = "1.1.0"
description = "A glassmorphic cross-platform EPUB/TXT reader"
authors = ["Zenith Reader"]
edition = "2024"
rust-version = "1.96"

[lib]
name = "zenith_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
reader-core = { path = "../crates/reader-core" }
reader-application = { path = "../crates/reader-application" }
reader-contracts = { path = "../crates/reader-contracts" }
reader-state = { path = "../crates/reader-state" }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
] }
