[package]
name = "zenith-reader-server"
version = "1.1.0"
edition = "2024"
rust-version = "1.96"

[[bin]]
name = "zenith-reader-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
reader-core = { path = "../../crates/reader-core" }
reader-application = { path = "../../crates/reader-application" }
reader-contracts = { path = "../../crates/reader-contracts" }
reader-state = { path = "../../crates/reader-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["compression-full", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
