[package]
name = "reader-core"
version = "1.1.0"
edition = "2024"
rust-version = "1.96"

[dependencies]
encoding_rs = "0.8"
encoding_rs_io = "0.1.7"
mime_guess = "2"
percent-encoding = "2"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
